Added font collection link

--- a/content/pages/explore.mdx
+++ b/content/pages/explore.mdx
@@ -2,4 +2,5 @@
 title: Explore
 ---
 
-Coming soon.
+<h2 className="font-display">Collections</h2>
+<a href="https://dakotag.notion.site/0f1cf7459b794f75ad0b3a730e2b0515?v=ec13523c35a24dc697085d436487ac34&pvs=4" rel="noopener noreferrer" target="_blank">Collected fonts</a>: fonts collected while browsing the web
