added featured projects row

--- a/content/projects/ambi.mdx
+++ b/content/projects/ambi.mdx
@@ -1,13 +1,14 @@
 ---
 name: Ambi
-date: '2022-11-21'
-dateRange: '2021'
-tags: ['app', 'hackathon', 'education']
-thumbnail: '/images/ambi-cover.png'
-headerImage: '/images/ambi-cover.png'
+date: "2022-11-21"
+dateRange: "2021"
+tags: ["app", "hackathon", "education"]
+thumbnail: "/images/ambi-cover.png"
+headerImage: "/images/ambi-cover.png"
 draft: false
-status: 'PAST'
-description: 'An app that helps you train your non-dominant hand'
+status: "PAST"
+description: "An app that helps you train your non-dominant hand"
+featured: false
 ---
 
 Ambi's goal is to help its users become ambidextrous! The app provides habit tracking for daily non-dominant hand activities, hand-strengthening tap games, and guided writing and sports exercises.
