--- a/content/projects/breve.mdx
+++ b/content/projects/breve.mdx
@@ -8,6 +8,7 @@ headerImage: "/images/breve-banner.png"
 draft: false
 status: "CURRENT"
 description: "Listen to your newsletter feed as a podcast"
+featured: true
 ---
 
 [Breve](https://www.breve.to/) is a web app that generates a personalized daily podcast from your newsletter subscriptions.
