--- a/content/projects/buckley-grams.mdx
+++ b/content/projects/buckley-grams.mdx
@@ -1,13 +1,14 @@
 ---
 name: Buckley Grams
-date: '2022-8-22'
-dateRange: '2020-2022'
-tags: ['website', 'social', 'platform']
-thumbnail: '/images/buckley-grams-cover.JPG'
-headerImage: '/images/buckley-grams-cover.JPG'
+date: "2022-8-22"
+dateRange: "2020-2022"
+tags: ["website", "social", "platform"]
+thumbnail: "/images/buckley-grams-cover.JPG"
+headerImage: "/images/buckley-grams-cover.JPG"
 draft: false
-status: 'PAST'
-description: 'Digital holiday message-sending platform built for my high school community'
+status: "PAST"
+description: "Digital holiday message-sending platform built for my high school community"
+featured: false
 ---
 
 When the pandemic brought high school classes online, I built a fleet of websites to virtualize long-standing school gram/message-exchange traditions and bring back the sense of community we were missing.
