--- a/content/projects/ecoverse.mdx
+++ b/content/projects/ecoverse.mdx
@@ -1,13 +1,14 @@
 ---
 name: EcoVerse
-date: '2022-10-21'
-dateRange: '2018-2019'
-tags: ['app', 'game', 'environment']
-thumbnail: '/images/ecoverse-banner.jpeg'
-headerImage: '/images/ecoverse-banner.jpeg'
+date: "2022-10-21"
+dateRange: "2018-2019"
+tags: ["app", "game", "environment"]
+thumbnail: "/images/ecoverse-banner.jpeg"
+headerImage: "/images/ecoverse-banner.jpeg"
 draft: false
-status: 'PAST'
+status: "PAST"
 description: "A mobile game developed with Google Play's Change the Game Design Challenge"
+featured: false
 ---
 
 After finishing as a finalist in Google Play's first-ever Change the Game Design Challenge, I worked with Google and Girls Make Games to bring my submission, EcoVerse, to life.
