--- a/content/projects/koi.mdx
+++ b/content/projects/koi.mdx
@@ -8,6 +8,7 @@ headerImage: "/images/koi-banner.png"
 draft: false
 status: "CURRENT"
 description: "Your trend-intelligent social media marketing agent"
+featured: true
 ---
 
 Coming soon.
