--- a/content/projects/taskranger.mdx
+++ b/content/projects/taskranger.mdx
@@ -1,13 +1,14 @@
 ---
 name: TaskRanger
-date: '2022-12-21'
-dateRange: '2020-2021'
-tags: ['app', 'productivity', 'national parks']
-thumbnail: '/images/taskranger-cover.jpeg'
-headerImage: '/images/taskranger-cover.jpeg'
+date: "2022-12-21"
+dateRange: "2020-2021"
+tags: ["app", "productivity", "national parks"]
+thumbnail: "/images/taskranger-cover.jpeg"
+headerImage: "/images/taskranger-cover.jpeg"
 draft: false
-status: 'PAST'
-description: 'Your simple, gamified, national-park-themed to-do list app'
+status: "PAST"
+description: "Your simple, gamified, national-park-themed to-do list app"
+featured: false
 ---
 
 [TaskRanger](https://taskranger.app/) is a cross-platform gamified to-do list app I built in 2020-2021 as I taught myself React Native and Firebase.
