--- a/content/projects/wildernation.mdx
+++ b/content/projects/wildernation.mdx
@@ -1,13 +1,14 @@
 ---
 name: Wildernation
-date: '2020-12-21'
-dateRange: '2017-2019'
-tags: ['blog', 'brand', 'environment', 'website']
-thumbnail: '/images/wildernation-cover.jpeg'
-headerImage: '/images/wildernation-cover.jpeg'
+date: "2020-12-21"
+dateRange: "2017-2019"
+tags: ["blog", "brand", "environment", "website"]
+thumbnail: "/images/wildernation-cover.jpeg"
+headerImage: "/images/wildernation-cover.jpeg"
 draft: false
-status: 'PAST'
-description: 'A reflection on the development of Wildernation, a sustainability-focused brand'
+status: "PAST"
+description: "A reflection on the development of Wildernation, a sustainability-focused brand"
+featured: false
 ---
 
 ## About
