--- a/content/projects/koi.mdx
+++ b/content/projects/koi.mdx
@@ -7,7 +7,7 @@ thumbnail: "/images/koi-banner.png"
 headerImage: "/images/koi-banner.png"
 draft: false
 status: "CURRENT"
-description: "Your trend-intelligent social media marketing agent"
+description: "Coming soon."
 featured: true
 ---
 
